--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,18 @@
   --color-black-pearl-800: #1a4a72;
   --color-black-pearl-900: #1a3f60;
   --color-black-pearl-950: #0a1724;
+
+  --color-wine-50: #fbf4f8;
+  --color-wine-100: #f7ecf2;
+  --color-wine-200: #f1d9e6;
+  --color-wine-300: #e7bad0;
+  --color-wine-400: #d78fb2;
+  --color-wine-500: #c86c95;
+  --color-wine-600: #b34f77;
+  --color-wine-700: #9a3c5f;
+  --color-wine-800: #803450;
+  --color-wine-900: #6c2f45;
+  --color-wine-950: #4b1b2c;
 }
 
 html {
