attempting sveltized matterjs integration

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 	/* masonic offwhite */
 	--color-primaryfg: #e7e7df;
 	/* masonic offblack */
-	--color-primarybg: #18181b;
+	--color-primarybg: #181d21;
 	/* same off black */
 	--color-accentfg: #18181b;
 	/* tailwind wine 950 */
