--- a/src/app.css
+++ b/src/app.css
@@ -34,3 +34,7 @@ html {
 	@apply bg-mainbg transition-colors duration-500 ease-in-out;
 	@apply selection:bg-dominantbg/20 selection:text-mainfg;
 }
+
+.crackedButton {
+	@apply rounded-lg backdrop-blur-sm border-2 border-mainfg/60 hover:border-mainfg/80 transition-all duration-300 hover:scale-105 hover:bg-mainfg/10 p-2 text-mainfg/60 hover:text-mainfg/80;
+}
